--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 哈库纳玛塔塔
 subtitle: もっと優秀な人になるために努力します
-description: 欢迎来到我的个人站~
+description: Welcome To QiYu's Blog ヾ(･ω･`｡)
 # 头像里面的标题
 avatarTitle: Shanks
 # 头像里面的描述
